--- a/Meeting Notes/10.06.2020 Meeting.md
+++ b/Meeting Notes/10.06.2020 Meeting.md
@@ -21,7 +21,7 @@
 
 ## Didn't Get around to
 
-Look into Neuroscience and emotions 
+Look into Neuroscience and emotions  
 
 - Curious to see how they arise in the brain 
 - Antonio Demasio 
@@ -30,3 +30,7 @@ Look into Neuroscience and emotions
 
 
 ## For the Next Week
+
+enactivism
+
+- Our interactions with the world 
